# cob-ai

./: .gitignore  DEPLOYMENT.md  LICENSE  MANIFEST.in  README.md  build_and_upload.py  pyproject.toml  requirements-dev.txt  test_import.py  to_string.py
cob_ai/: __init__.py  client.py  models.py
dev/: test.py
src/cob_ai/: __init__.py  client.py  models.py
